src/tess/tl/test/fail/test_fail_alias_reserved_c.tl
#module Foo
f() { 1 }

#module main
#alias c_foo Foo

main() { c_foo.f() }
